--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "expo": "^37.0.0",
-    "expo-updates": "~0.1.0",
+    "appcenter": "3.0.3",
+    "appcenter-analytics": "3.0.3",
+    "appcenter-crashes": "3.0.3",
+    "react-native-code-push": "^6.2.1",
+    "i18n-js": "^3.8.0",
     "react": "~16.9.0",
     "react-dom": "16.9.0",
     "react-native": "~0.61.5",
